<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.databinding.ObservableField" />

        <import type="com.twain.say.utils.UIState" />

        <variable
            name="uiState"
            type="ObservableField&lt;UIState>" />

        <variable
            name="viewModel"
            type="com.twain.say.ui.home.viewmodel.HomeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.HomeFragment">

            <include
                android:id="@+id/toolbar"
                layout="@layout/layout_toolbar" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/gray_back_round_corners_search"
                android:backgroundTint="@color/translucent_white"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:queryBackground="@android:color/transparent"
                app:queryHint="@string/search_your_voice_note"
                app:visible="@{uiState == UIState.HAS_DATA}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_notes"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_8sdp"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/_60sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                app:listItems="@{viewModel.notes}"
                app:visible="@{uiState == UIState.HAS_DATA}"
                tools:listitem="@layout/item_voice_note" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_empty_notes"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintWidth_percent="0.7"
                android:layout_margin="@dimen/_8sdp"
                android:src="@drawable/ic_no_data"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_empty_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:text="@string/empty_notes_list"
                android:textAlignment="center"
                android:textColor="@color/primary_darker"
                android:textSize="@dimen/_12ssp"
                app:fontFamily="@font/open_sans_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_empty_notes" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_empty_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="iv_empty_notes, tv_empty_notes"
                app:visible="@{uiState == UIState.EMPTY}" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:backgroundTint="@color/fab_background_tint"
                android:contentDescription="@string/add_note_button"
                app:iconSize="@dimen/_27sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_voice"
                app:tint="@color/white" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/bottom_sheet_dialog_layout"
            layout="@layout/bsheet_dialog_now_playing"
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>